src/objects/Machine__c.object
<CustomObject>
    <fields>
        <fullName>Backup_Storage__c</fullName>
        <label>Backup Storage (GB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Machines</relationshipLabel>
        <relationshipName>Machines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Iaas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iaas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_Type__c</fullName>
        <label>Instance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>c3.2xlarge</fullName>
                </value>
                <value>
                    <fullName>c3.4xlarge</fullName>
                </value>
                <value>
                    <fullName>c3.8xlarge</fullName>
                </value>
                <value>
                    <fullName>c3.large</fullName>
                </value>
                <value>
                    <fullName>c3.xlarge</fullName>
                </value>
                <value>
                    <fullName>c4.2xlarge</fullName>
                </value>
                <value>
                    <fullName>c4.4xlarge</fullName>
                </value>
                <value>
                    <fullName>c4.8xlarge</fullName>
                </value>
                <value>
                    <fullName>c4.large</fullName>
                </value>
                <value>
                    <fullName>c4.xlarge</fullName>
                </value>
                <value>
                    <fullName>d2.2xlarge</fullName>
                </value>
                <value>
                    <fullName>d2.4xlarge</fullName>
                </value>
                <value>
                    <fullName>d2.8xlarge</fullName>
                </value>
                <value>
                    <fullName>d2.xlarge</fullName>
                </value>
                <value>
                    <fullName>g2.2xlarge</fullName>
                </value>
                <value>
                    <fullName>g2.8xlarge</fullName>
                </value>
                <value>
                    <fullName>i2.2xlarge</fullName>
                </value>
                <value>
                    <fullName>i2.4xlarge</fullName>
                </value>
                <value>
                    <fullName>i2.8xlarge</fullName>
                </value>
                <value>
                    <fullName>i2.xlarge</fullName>
                </value>
                <value>
                    <fullName>m3.2xlarge</fullName>
                </value>
                <value>
                    <fullName>m3.large</fullName>
                </value>
                <value>
                    <fullName>m3.medium</fullName>
                </value>
                <value>
                    <fullName>m3.xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.10xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.2xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.4xlarge</fullName>
                </value>
                <value>
                    <fullName>m4.large</fullName>
                </value>
                <value>
                    <fullName>m4.xlarge</fullName>
                </value>
                <value>
                    <fullName>r3.2xlarge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAM_GB__c</fullName>
        <defaultValue>16</defaultValue>
        <label>RAM (GB)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Instance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reserved Instance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_GB__c</fullName>
        <defaultValue>75</defaultValue>
        <label>Storage (GB)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vCPUs__c</fullName>
        <defaultValue>2</defaultValue>
        <label>vCPUs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Machine</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Machines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>